# 2023-7th-China-College-IC-Competition-AWCloud-Cup

./: .gitattributes  readme.md
Doc/: 运行指南.txt
Doc/赛事官方文档/: C5MB_AI加速器接口说明.docx  C5MB_AI加速器接口说明_V1.1.docx  PL DDR3 pin.tcl  ddr3_vga IP使用说明.docx  dvp_ddr3 IP使用说明.docx  vcam IP使用说明.docx  vhdmi IP使用说明.doc  重庆OPEN VPN使用手册1.1.docx
FPGA_Project/paddle_frame/: 7153.nb  716.nb  7162.nb  debug.sh  hdmi.sh  new1ch_3.nb  new_1ch_1.nb  run.sh  ssd_detection  ssd_inference_once  test_sp3.nb
Project_Src/FPGA_Src/C5TB_GHRD_CCIC7_C5TB_dantongdao_resize/: C5TB_top.qsf  C5TB_top.qws  C5TB_top.v  C5TB_top2.sdc  C5TB_top3.sdc  C5TB_top_my.sdc  cr_ie_info.json  ddr3_vga_top_hw.tcl  dvp_ddr3_vga_top_hw.tcl  dvp_ddr3_vga_top_hw.tcl~  hps_sdram_p0_summary.csv  qmegawiz_errors_log.txt  soc_system.qsys  soc_system.sopcinfo  stp1.stp
Project_Src/FPGA_Src/C5TB_GHRD_CCIC7_C5TB_dantongdao_resize/.qsys_edit/: preferences.xml  soc_system.xml  soc_system_schematic.nlv
Project_Src/FPGA_Src/C5TB_GHRD_CCIC7_C5TB_dantongdao_resize/app/.metadata/: version.ini
Project_Src/FPGA_Src/C5TB_GHRD_CCIC7_C5TB_dantongdao_resize/app/transfer_test/: .cproject
Project_Src/FPGA_Src/C5TB_GHRD_CCIC7_C5TB_dantongdao_resize/db/: .cmp.kpt  C5TB_top.(0).cnf.cdb  C5TB_top.(0).cnf.hdb  C5TB_top.(1).cnf.cdb  C5TB_top.(1).cnf.hdb  C5TB_top.(10).cnf.cdb  C5TB_top.(10).cnf.hdb  C5TB_top.(100).cnf.cdb  C5TB_top.(100).cnf.hdb  C5TB_top.(101).cnf.cdb  C5TB_top.(101).cnf.hdb  C5TB_top.(102).cnf.cdb  C5TB_top.(102).cnf.hdb  C5TB_top.(103).cnf.cdb  C5TB_top.(103).cnf.hdb  C5TB_top.(104).cnf.cdb  C5TB_top.(104).cnf.hdb  C5TB_top.(105).cnf.cdb  C5TB_top.(105).cnf.hdb  C5TB_top.(106).cnf.cdb  C5TB_top.(106).cnf.hdb  C5TB_top.(107).cnf.cdb  C5TB_top.(107).cnf.hdb  C5TB_top.(108).cnf.cdb  C5TB_top.(108).cnf.hdb  C5TB_top.(109).cnf.cdb  C5TB_top.(109).cnf.hdb  C5TB_top.(11).cnf.cdb  C5TB_top.(11).cnf.hdb  C5TB_top.(110).cnf.cdb  C5TB_top.(110).cnf.hdb  C5TB_top.(111).cnf.cdb  C5TB_top.(111).cnf.hdb  C5TB_top.(112).cnf.cdb  C5TB_top.(112).cnf.hdb  C5TB_top.(113).cnf.cdb  C5TB_top.(113).cnf.hdb  C5TB_top.(114).cnf.cdb  C5TB_top.(114).cnf.hdb  C5TB_top.(115).cnf.cdb  (+800 more)
Project_Src/FPGA_Src/C5TB_GHRD_CCIC7_C5TB_dantongdao_resize/db/C5TB_top_tmp_qic_import/: qic_export_file_list
Project_Src/FPGA_Src/C5TB_GHRD_CCIC7_C5TB_dantongdao_resize/hps_isw_handoff/soc_system_hps_0/: id  soc_system_hps_0.hiof
Project_Src/FPGA_Src/C5TB_GHRD_CCIC7_C5TB_dantongdao_resize/incremental_db/compiled_partitions/: C5TB_top.autoh_e40e1.cmp.ammdb  C5TB_top.autoh_e40e1.cmp.cdb  C5TB_top.autoh_e40e1.cmp.hdb  C5TB_top.autoh_e40e1.cmp.rcfdb  C5TB_top.autoh_e40e1.map.dpi  C5TB_top.autoh_e40e1.map.oln.cdb  C5TB_top.autoh_e40e1.rrp.cdb  C5TB_top.autoh_e40e1.rrp.hdb  C5TB_top.autos_3e921.cmp.ammdb  C5TB_top.autos_3e921.cmp.cdb  C5TB_top.autos_3e921.cmp.hdb  C5TB_top.autos_3e921.cmp.rcfdb  C5TB_top.autos_3e921.map.dpi  C5TB_top.autos_3e921.map.olf.cdb  C5TB_top.autos_3e921.map.olm.cdb  C5TB_top.autos_3e921.map.oln.cdb  C5TB_top.autos_3e921.map.orf.cdb  C5TB_top.autos_3e921.map.orm.cdb  (+103 more)
Project_Src/FPGA_Src/C5TB_GHRD_CCIC7_C5TB_dantongdao_resize/ip/: cnn_top.qarlog
Project_Src/FPGA_Src/C5TB_GHRD_CCIC7_C5TB_dantongdao_resize/output_files/: C5TB_top.asm.rpt  C5TB_top.done  C5TB_top.fit.summary  C5TB_top.flow.rpt  C5TB_top.jdi  C5TB_top.map.smsg  C5TB_top.map.summary  C5TB_top.merge.rpt  C5TB_top.merge.summary  C5TB_top.pin  C5TB_top.rbf  C5TB_top.sld  C5TB_top.sta.summary
Project_Src/FPGA_Src/C5TB_GHRD_CCIC7_C5TB_dantongdao_resize/soc_system/: soc_system.bsf  soc_system.cmp  soc_system.html  soc_system_bb.v  soc_system_generation.rpt  soc_system_generation_previous.rpt  soc_system_inst.v  soc_system_inst.vhd
Project_Src/Model_Training/PaddleDetection-2.2.0_1/paddledet.egg-info/: PKG-INFO
Project_Src/Model_Training/PaddleDetection-2.2.0_1/ppdet/: version.py
Project_Src/Model_Training/PaddleDetection-2.2.0_1CF/paddledet.egg-info/: PKG-INFO
Project_Src/NNA_Src/nna/: build.demo.sh  build.hdmi.sh  build.inference_once.sh  build.paddlelite.sh  build.sdk.sh  deploy2aiep.sh  deploy2aiep.with.debug.sh
Project_Src/NNA_Src/nna/Paddle-Lite/: CMakeLists.txt
Project_Src/NNA_Src/nna/intelfpga_sdk/lib/: CMakeLists.txt  build.sh  common.h  intelfpga.cc
Project_Src/NNA_Src/nna/paddle_frame/: 7152.nb  7163.nb  amm_wr_drv.ko  config.txt  inference_once.sh  new_4.nb  pre.sh  ssd_hdmi  test_818.nb
Project_Src/NNA_Src/nna/ssd_detection_demo/: 811_nna备份.rar
Project_Src/NNA_Src/nna/ssd_detection_demo/ssd_inference_once/: CMakeLists.txt  build.sh  sem.h  ssd_inference_once.cc
Project_Src/amm_driver/amm_wracc/src/: .amm_wr_drv.o.cmd  Makefile  amm_wr_drv.c  hps_0.h
(+253 files in other folders)
